<resources>
    <string name="app_name">Course Selector</string>
    <string name="username">Username</string>
    <string name="usernameField">Enter Username</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="enter_username">Enter Username</string>
    <string name="instructor_account">Instructor Account (For Signup)</string>
    <string name="welcome">Welcome!</string>
    <string name="delete_course">Delete course</string>
    <string name="add_course">Add course</string>
    <string name="add_user">Add user</string>
    <string name="delete_user">Delete user</string>
    <string name="edit_course">Edit course</string>
    <string name="instructor_user">Instructor user</string>
    <string name="delete_user_btn">Delete user</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="add_course_btn">Add Course</string>
    <string name="course_code_txt">Course Code</string>
    <string name="course_name_txt">Course Name</string>
    <string name="edit_course_name">Edit Course Name</string>
    <string name="edit_course_code">Edit Course Code</string>
    <string name="save_changes">Save Changes</string>
    <string name="select_course_to_edit">Select Course to Edit</string>
</resources>