<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-247dp">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:paddingLeft="60dp"
            android:paddingTop="120dp"
            android:text="@string/welcome"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="0dp"
            android:layout_height="262dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/cute_but_spice" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="383dp"
        android:layout_height="81dp"
        android:layout_marginBottom="431dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/course_code"
            android:layout_width="10dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/course_code_txt" />

        <EditText
            android:id="@+id/course_code_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/course_code"
            android:inputType="textPersonName"
            android:visibility="visible"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="384dp"
        android:layout_height="69dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="14dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:id="@+id/course_name"
            android:layout_width="6dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/course_name_txt" />

        <EditText
            android:id="@+id/course_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/course_name"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <Button
            android:id="@+id/buttonAddCourse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_course_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>