<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-247dp">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:paddingLeft="60dp"
            android:paddingTop="120dp"
            android:text="@string/welcome"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="0dp"
            android:layout_height="303dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ooh" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="386dp"
        android:layout_height="79dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/searchCourseCodePrompt"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_course_to_edit" />

        <EditText
            android:id="@+id/course_code_field"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/course_code"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="387dp"
        android:layout_height="64dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="310dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/editCourseNamePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_course_name" />

        <EditText
            android:id="@+id/course_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edit_course_name"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="385dp"
        android:layout_height="64dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="11dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/editCourseCodePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_course_code" />

        <EditText
            android:id="@+id/editCourseCodeField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edit_course_code"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="389dp"
        android:layout_height="67dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="9dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5">

        <Button
            android:id="@+id/saveChangesBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_changes"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>